# BlockHawk

./: Cargo.toml
src/: main.rs
src/cli/: mod.rs  token.rs  track.rs
src/models/: mod.rs  tokens.rs  wallet.rs
src/service/: analytics.rs  mod.rs  solana.rs
src/utils/: formatter.rs  logger.rs  mod.rs  validation.rs
